--- a/auctioneer-account.html
+++ b/auctioneer-account.html
@@ -199,7 +199,7 @@
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 py-2 d-block d-sm-inline-block">Edit your company account</button>
+                  <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 py-2 btn-block d-sm-inline-block">Edit your company account</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-3 mt-sm-0">
                   <a href="#!" class="see-all see-all-2 fz-18 text-red">Sign out of Asaas</a>
