--- a/auctioneer-sign-up-5.html
+++ b/auctioneer-sign-up-5.html
@@ -187,7 +187,7 @@
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Complete your registration</button>
+                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 btn-block d-sm-inline-block">Complete your registration</button>
                 </div>
               </div>
             </form>
