--- a/bidder-auction-details-closed.html
+++ b/bidder-auction-details-closed.html
@@ -71,8 +71,8 @@
               <div class="row row-1">
                 <div class="col-auto">
                   <a href="#!" class="btn btn-outline-light btn-watch">
-                    <img src="img/watch.svg" alt="">
-                    <span class="ml-2">Watch</span>
+                    <span class="img-watch align-middle"></span>
+                    <span class="ml-2 align-middle">Watch</span>
                   </a>
                 </div>
                 <div class="col-auto">
