--- a/bidder-auction-details-outbid.html
+++ b/bidder-auction-details-outbid.html
@@ -52,132 +52,220 @@
           <li class="nav-item">
             <a class="nav-link" href="#!">Account</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-red" href="#!">Sign out</a>
-          </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <section class="section">
+  <section class="section pt-5 mb-3 bg-white">
     <div class="container">
-      <div class="form-row justify-content-center">
-        <div class="col-sm-11 col-md-8 col-xl-10">
-          <div class="card card-signup">
-            <div class="row align-items-center mb-2">
-              <div class="col">
-                <h2 class="h2 lh-1">Last step</h2>
+      <div class="row row-3 justify-content-center">
+        <div class="col-xl-7 mb-5 mb-xl-0">
+          <a href="#!" class="see-all see-all-back">
+            <img src="img/arrow-left.svg" alt="" class="align-middle">
+            <span class="d-inline-block pl-1 align-middle">Back to screen semantic name</span>
+          </a>
+          <div class="fz-32 font-weight-bold lh-12 mt-1">Auction for residential plot No. 13, Block 1 / A, Plan 26/816, Al-Aziziyah neighborhood</div>
+          <div class="row row-1 py-3">
+            <div class="col-md-6 mb-3 mb-md-0">
+              <div class="row row-1">
+                <div class="col-auto">
+                  <a href="#!" class="btn btn-outline-light btn-watch">
+                    <span class="img-watch align-middle"></span>
+                    <span class="ml-2 align-middle">Watch</span>
+                  </a>
+                </div>
+                <div class="col-auto">
+                  <a href="#!" class="btn btn-outline-light btn-watch">
+                    <img src="img/whatsapp.svg" alt="">
+                    <span class="ml-2">Contact the auctioneer</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="row row-1 justify-content-md-end">
+                <div class="col-auto">
+                  <a href="#!" class="btn btn-outline-light btn-watch">
+                    <img src="img/facebook.svg" alt="">
+                    <span class="ml-2">Share</span>
+                  </a>
+                </div>
+                <div class="col-auto">
+                  <a href="#!" class="btn btn-outline-light btn-watch">
+                    <img src="img/twitter.svg" alt="">
+                    <span class="ml-2">Share</span>
+                  </a>
+                </div>
+                <div class="col-auto">
+                  <a href="#!" class="btn btn-outline-light btn-watch">
+                    <img src="img/whatsapp.svg" alt="">
+                    <span class="ml-2">Share</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-img bg-img-460 bg-img-radius" style="background-image: url(img/img26.png)">
+          </div>
+          <div class="radius-bottom-8 mb-4">
+            <div class="row row-4 pt-1">
+              <div class="col-6 col-sm-3 mb-1 mb-sm-0">
+                <div class="bg-img bg-img-112" style="background-image: url(img/img19.png)">
+                </div>
+              </div>
+              <div class="col-6 col-sm-3 mb-1 mb-sm-0">
+                <div class="bg-img bg-img-112 embed-responsive embed-responsive-16by9" style="background-image: url(img/img20.png)">
+                </div>
+              </div>
+              <div class="col-6 col-sm-3">
+                <div class="bg-img bg-img-112" style="background-image: url(img/img21.png)">
+                </div>
+              </div>
+              <div class="col-6 col-sm-3">
+                <div class="bg-img bg-img-112" style="background-image: url(img/img22.png)">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
+          <div class="row row-1 align-items-center py-2 mb-4">
+            <div class="col-auto">
+              <a href="#!" class="a-property"><img src="img/property1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">House</span></a>
+            </div>
+            <div class="col-auto">
+              <a href="#!" class="a-property"><img src="img/property2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">350 sqm</span></a>
+            </div>
+            <div class="col-auto">
+              <a href="#!" class="a-property"><img src="img/property5.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">SAR 2500 per sqm</span></a>
+            </div>
+          </div> 
+          <div class="fz-32 font-weight-bold lh-12 mb-3">Location</div>
+          <div>Riyadh’s Kingdom Tower is situated in the heart of the country. The most prestigious skyscrapes in the world is home to a vast number of successful international companies.</div>
+          <div class="row row-1 mt-3">
+            <div class="col-md-7 mb-3 mb-md-0">
+              <iframe class="bg-img-radius" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7249.004867243087!2d46.67411454250344!3d24.709625491769586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x37737eab160a212!2sKingdom%20Tower!5e0!3m2!1sru!2str!4v1621501421711!5m2!1sru!2str" width="100%" height="232" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="col-md-5">
+              <h3 class="mb-2">Address details</h3>
+              <div class="address">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <img src="img/address1.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">City</span>
+                  </div>
+                  <div class="col-auto text-gray-3">Al Riyadh</div>
+                </div>
+              </div>
+              <div class="address">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <img src="img/address2.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Neighbourhood</span>
+                  </div>
+                  <div class="col-auto text-gray-3">Central district</div>
+                </div>
+              </div>
+              <div class="address">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <img src="img/address3.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Zip code</span>
+                  </div>
+                  <div class="col-auto text-gray-3">11564</div>
+                </div>
+              </div>
+              <div class="address">
+                <div class="row align-items-center">
+                  <div class="col">
+                    <img src="img/address4.svg" alt="" class="align-middle"><span class="d-inline-block pl-1 align-middle">Building number</span>
+                  </div>
+                  <div class="col-auto text-gray-3">11564</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="fz-32 font-weight-bold lh-12 mt-4 mb-3">This auction has special terms</div>
+          <div>This auction has special terms stated by the Auctioneer. These terms have not been manually verified by Asaas. These terms are applicable on top of Asaas’s terms and conditions.</div>
+          <div class="block-gray mt-3">All bids will be made public once the bidding process. For additional information, please visit https://auctionco.sa.</div>
+          <hr class="my-40">
+          <div class="row row-1">
+            <div class="col-sm-auto">
+              <div class="base-img">
+                <img src="img/base.png" alt="">
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="fz-32 font-weight-bold lh-12">Awesome Auctions Co.</div>
+              <div class="text-gray-3">Our company has been on the market of property auctions for more than 20 years. We are a future-focused auction company, that aims to intensify the development of properties in the Hejaz region.</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-xl-5">
+          <div class="bid-block">
+            <span class="pill pill-red mb-3">You have been outbid!</span>
+            <div class="row row-1 align-items-center">
+              <div class="col-sm">
+                <div class="fz-32 font-weight-bold lh-12 text-black">SAR 2 300 000</div>
+              </div>
+              <div class="col-sm-auto">SAR 1500 per sqm</div>
+            </div>
+            <div class="mt-3">
+              <div class="row pb-1">
+                <div class="col">Currently selected bid</div>
+                <div class="col-auto">1 350 000</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Property tax (first property)</div>
+                <div class="col-auto">19 500</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Lister commission tax</div>
+                <div class="col-auto">3 500</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Platform commission tax</div>
+                <div class="col-auto">1 500</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Lister commission</div>
+                <div class="col-auto">70 500</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Platform commmission</div>
+                <div class="col-auto">13 500</div>
+              </div>
+            </div>
+            <hr class="my-1">
+            <div class="row text-black">
+              <div class="col">Total price, incl. taxes and commissions</div>
+              <div class="col-auto">1 431 009</div>
+            </div>
+            <div class="row align-items-center mt-2 pt-1 bid-time">
+              <div class="col-sm">
+                <span class="d-inline-block">
+                  <span class="bid-clock bid-clock-blue"></span>
+                  <span class="bid-text-blue font-weight-bold align-middle  d-inline-block">2d : 3h : 15m</span> 
+                  <span class="align-middle d-inline-block">left</span>
+                </span>
+              </div>
+              <div class="col-sm-auto"><span>Last bid: <span class="bid-text-blue font-weight-bold">2 hours ago</span></span></div>
+            </div>
+            <button class="btn btn-success btn-sign ml-0 mt-3 fz-18 py-2 btn-block">Bid SAR 2 310 000</button>
+            <div class="row row-4 justify-content-center align-items-center text-center pt-1">
+              <div class="col-auto">
+                <div class="adjust-block">
+                  <a href="#!" class="adjust-bid adjust-bid-minus-gray align-middle d-inline-block"></a>
+                </div>
               </div>
               <div class="col-auto">
-                <div>
-                  <img src="img/lock.svg" alt="">
+                <span class="text-black align-middle d-inline-block">Adjust your bid</span>
+              </div>
+              <div class="col-auto">
+                <div class="adjust-block">
+                  <a href="#!" class="adjust-bid adjust-bid-plus-blue align-middle d-inline-block"></a>
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xl-8">
-                <p class="pb-3 text-gray">This information will only be shared with Auctioneers if you win one of their auctions. You can register as a company or a private bidder.</p>
-              </div>
-            </div>
-            <form id="form" novalidate="novalidate">
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">First name</div>
-                    <input type="text" class="form-control" placeholder="Albus" name="firstname" disabled>
-                    <div class="fz-14 mt-2 confirmed">Confirmed through your government ID</div>
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Second name</div>
-                    <input type="text" class="form-control" placeholder="Severus" name="secondname" disabled>
-                    <div class="fz-14 mt-2 confirmed">Confirmed through your government ID</div>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Third name</div>
-                    <input type="text" class="form-control" placeholder="Al" name="thirdname" disabled>
-                    <div class="fz-14 mt-2 confirmed">Confirmed through your government ID</div>
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Family name</div>
-                    <input type="text" class="form-control" placeholder="Potter" name="familyname" disabled>
-                    <div class="fz-14 mt-2 confirmed">Confirmed through your government ID</div>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Your email<span class="text-red">*</span></div>
-                    <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email" id="email">
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-2 pb-3">
-                <div class="col-auto">
-                  <label class="check-group checkbox-group">
-                    <input type="checkbox" id="switcher">
-                    <div>Sign up as a company</div>
-                  </label>
-                </div>
-              </div>
-
-              <div class="row align-items-center mt-4 block-person">
-                <div class="col-sm-auto">
-                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 btn-block d-sm-inline-block">Confrim and start bidding</button>
-                </div>
-              </div>
-
-              <div class="mt-2 block-company">
-                <div class="row">
-                  <div class="col-xl-6">
-                    <div class="form-group">
-                      <div class="mb-2">Company name<span class="text-red">*</span></div>
-                      <input type="text" class="form-control" placeholder="Awesome Industries Co." name="compname">
-                    </div>
-                  </div>
-                  <div class="col-xl-6">
-                    <div class="form-group">
-                      <div class="d-flex flex-column-reverse">
-                        <input type="number" class="form-control" placeholder="1010584421" id="count-eight" maxlength="8" name="registrationnumber">
-                        <div class="row row-1 mb-2 align-items-center">
-                          <div class="col">Registration number<span class="text-red">*</span>
-                          </div>
-                          <div class="col-auto fz-14">
-                            <div id="the-count" class="the-count">
-                              <span id="current">0</span>
-                              <span id="maximum">/8</span>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-xl-6">
-                    <div class="form-group">
-                      <div class="mb-2">Company address<span class="text-red">*</span></div>
-                      <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="compadress">
-                    </div>
-                  </div>
-                </div>
-                <div class="row align-items-center mt-4">
-                  <div class="col-sm-auto">
-                    <button class="btn btn-success btn-sign ml-0 fz-18 py-2 btn-block d-sm-inline-block">Start bidding on Asaas</button>
-                  </div>
-                </div>
-              </div>
-
-            </form>
           </div>
         </div>
       </div>
