--- a/bidder-sign-up-5.html
+++ b/bidder-sign-up-5.html
@@ -88,7 +88,7 @@
             </ul>
             <div class="row align-items-center">
               <div class="col-sm-auto">
-                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Start browsing and bidding</button>
+                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 btn-block d-sm-inline-block">Start browsing and bidding</button>
               </div>
             </div>
           </div>
