--- a/guest-auction-details.html
+++ b/guest-auction-details.html
@@ -72,8 +72,8 @@
               <div class="row row-1">
                 <div class="col-auto">
                   <a href="#!" class="btn btn-outline-light btn-watch">
-                    <img src="img/watch.svg" alt="">
-                    <span class="ml-2">Watch</span>
+                    <span class="img-watch align-middle"></span>
+                    <span class="ml-2 align-middle">Watch</span>
                   </a>
                 </div>
                 <div class="col-auto">
@@ -248,7 +248,7 @@
                   <span class="align-middle d-inline-block">left</span>
                 </span>
               </div>
-              <div class="col-sm-auto"><span>Last bid: <span class="bid-text font-weight-bold">2 hours ago</span></span></div>
+              <div class="col-sm-auto"><span>Last bid: <span class="bid-text-blue font-weight-bold">2 hours ago</span></span></div>
             </div>
             <button class="btn btn-success btn-sign ml-0 mt-3 fz-18 py-2 btn-block">Bid SAR 2 310 000</button>
             <div class="row row-4 justify-content-center align-items-center text-center pt-1">
