--- a/auctioneer-account-edit.html
+++ b/auctioneer-account-edit.html
@@ -198,7 +198,7 @@
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 py-2 d-block d-sm-inline-block">Save account changes</button>
+                  <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 py-2 btn-block d-sm-inline-block">Save account changes</button>
                 </div>
                 <div class="col-sm-auto text-center mt-3 mt-sm-0">
                   <a href="#!" class="see-all see-all-2 fz-18">Cancel edits</a>
