--- a/auctioneer-sign-up-3.html
+++ b/auctioneer-sign-up-3.html
@@ -244,7 +244,7 @@
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Submit your registration for approval</button>
+                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 btn-block d-sm-inline-block">Submit your registration for approval</button>
                 </div>
               </div>
             </form>
