--- a/auctioneer-sign-up-6.html
+++ b/auctioneer-sign-up-6.html
@@ -68,7 +68,7 @@
             <p class="text-gray">We are happy to have you onboard! Start by creating your first Auction with the button below.</p>
             <div class="row align-items-center mt-4">
               <div class="col-sm-auto">
-                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Create your first Auction</button>
+                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 btn-block d-sm-inline-block">Create your first Auction</button>
               </div>
             </div>
           </div>
