--- a/bidder-sign-up-0.html
+++ b/bidder-sign-up-0.html
@@ -81,7 +81,7 @@
               </div>
               <div class="row align-items-center mt-4 pt-3">
                 <div class="col-sm-auto">
-                  <button class="btn btn-success btn-sign ml-0 fz-18 d-block d-sm-inline-block py-2">Get SMS code</button>
+                  <button class="btn btn-success btn-sign ml-0 fz-18 btn-block d-sm-inline-block py-2">Get SMS code</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-2 mt-sm-0">
                   <a href="#!" class="see-all see-all-2">For Auctioneers</a>
