--- a/bidder-sign-up-1.html
+++ b/bidder-sign-up-1.html
@@ -82,7 +82,7 @@
               </div>
               <div class="row align-items-center mt-4 pt-3">
                 <div class="col-sm-auto">
-                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Verify phone number</button>
+                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 btn-block d-sm-inline-block">Verify phone number</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-2 mt-sm-0">
                   <a href="#!" class="see-all see-all-2">I didn’t receive it</a>
